How to win section is not finished

--- a/index.html
+++ b/index.html
@@ -28,6 +28,29 @@
             <div id="articlePage">
                 <!-- BEFORE UPLOADING REMOVE EVERYTHING ABOVE UP TO THIS POINT -->
                 <div class="lp" id="landingpage">
+                    <section class="lpHowTo">
+                        <h3 class="hdl3">Jak vyhrát?</h3>
+                        <div class="lpWrapper">
+                            <div class="lpHowTo__boxes grid-3">
+                                <div class="lpHowTo__box">
+                                    <span class="lpHowTo__number">1</span> 
+                                    <p class="perex">Kupte jakýkoliv produkt LEGO<sup>®</sup> a uschovejte si účtenku.</p>
+                                </div>
+
+                                <div class="lpHowTo__box">
+                                    <span class="lpHowTo__number">2</span>
+                                    <p class="perex">Zaregistrujte svůj nákup na <a href="www.epickalegovyhra.cz" class="perex--link">www.epickalegovyhra.cz</a> nejpozději do&nbsp;31.&nbsp;7.&nbsp;2023.</p>
+                                </div>
+
+                                <div class="lpHowTo__box">
+                                    <span class="lpHowTo__number">3</span>
+                                    <p class="perex">Hrajeme o&nbsp;1000 minifigurek LEGO<sup>®</sup> a&nbsp;každý den o&nbsp;5&nbsp;stavebnic.</p>
+                                </div>
+                            </div>
+
+                            <a href="#" class="btn btn--media"><span class="btn-text">Více informací</span></a>
+                        </div>
+                    </section>
                     <!-- footer -->
                     <!--ShowArticle(24000)-->
                 </div>
