Competition section is not finished

--- a/index.html
+++ b/index.html
@@ -28,9 +28,110 @@
             <div id="articlePage">
                 <!-- BEFORE UPLOADING REMOVE EVERYTHING ABOVE UP TO THIS POINT -->
                 <div class="lp" id="landingpage">
-                    <section class="lpHowTo">
-                        <h3 class="hdl3">Jak vyhrát?</h3>
+                    <!-- competition -->
+                    <section class="lpCompetition">
+                        <picture>
+                            <source type="image/webp" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/epicka-vyhra.webp, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/epicka-vyhra@2x.webp 2x" />
+                            <source type="image/png" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/epicka-vyhra.png, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/epicka-vyhra@2x.png 2x" />
+                            <img src="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/epicka-vyhra.png" alt="Epická LEGO výhra" width="180" height="115" loading="lazy" class="lpCompetition__logo" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/epicka-vyhra.png, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/epicka-vyhra@2x.png 2x" />
+                        </picture>
+
                         <div class="lpWrapper">
+                            <h2 class="hdl2">Epická vesmírná soutěž se stavebnicemi LEGO<sup>®</sup></h2>
+                            <p class="subHdl">Vyhrajte hodnotné stavebnice LEGO<sup>®</sup> a minifigurky, které skutečně byly ve vesmíru!</p>
+
+                            <div class="lpCompetition__astronaut">
+                                <h3 class="hdl3">O co se hraje?</h3>
+                                <picture>
+                                    <source type="image/webp" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/vyhra-figurka.webp, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/vyhra-figurka@2x.webp 2x" />
+                                    <source type="image/png" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/vyhra-figurka.png, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/vyhra-figurka@2x.png 2x" />
+                                    <img src="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/vyhra-figurka.png" alt="LEGO astronaut" width="280" height="221" loading="lazy" class="lpCompetition__astronaut-image" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/vyhra-figurka.png, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/vyhra-figurka@2x.png 2x" />
+                                </picture>
+
+                                <div class="lpCompetition__productInfo">
+                                    <p class="perex perex--name">Minifigurka LEGO®, která letěla do vesmíru</p>
+                                    <p class="perex perex--number">1&nbsp;000x</p>
+                                </div>
+                            </div>
+
+                            <div class="lpCompetition__boxes">
+                                <a href="/hracky/lego-city-60350-lunarni-vyzkumna-stanice-d6910459.htm?evt=ac" class="lpCompetition__box">
+                                    <figure>
+                                        <picture>
+                                            <source type="image/webp" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/lego-city.webp, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/lego-city@2x.webp 2x" />
+                                            <source type="image/png" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/lego-city.png, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/lego-city@2x.png 2x" />
+                                            <img src="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/lego-city.png" alt="LEGO City 60350 Lunární výzkumná stanice" width="200" height="200" loading="lazy" class="lpCompetition__product-image" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/lego-city.png, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/lego-city@2x.png 2x" />
+                                        </picture>
+                                    </figure>
+                                    <div class="lpCompetition__productInfo">
+                                        <p class="perex perex--name">LEGO<sup>®</sup> City 60350 Lunární výzkumná stanice</p>
+                                        <p class="perex perex--number">71x</p>
+                                    </div>
+                                </a>
+
+                                <a href="/hracky/lego-minecraft-21245-pandi-utociste-d7582435.htm?evt=ac" class="lpCompetition__box">
+                                    <figure>
+                                        <picture>
+                                            <source type="image/webp" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/lego-minecraft.webp, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/lego-minecraft@2x.webp 2x" />
+                                            <source type="image/png" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/lego-minecraft.png, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/lego-minecraft@2x.png 2x" />
+                                            <img src="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/lego-minecraft.png" alt="LEGO® Minecraft® 21245 Pandí útočiště" width="200" height="200" loading="lazy" class="lpCompetition__product-image" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/lego-minecraft.png, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/lego-minecraft@2x.png 2x" />
+                                        </picture>
+                                    </figure>
+                                    <div class="lpCompetition__productInfo">
+                                        <p class="perex perex--name">LEGO<sup>®</sup> Minecraft<sup>®</sup> 21245 Pandí útočiště</p>
+                                        <p class="perex perex--number">71x</p>
+                                    </div>
+                                </a>
+
+                                <a href="/hracky/lego-friends-41731-mezinarodni-skola-v-mestecku-heartlake-d7582460.htm?evt=ac" class="lpCompetition__box">
+                                    <figure>
+                                        <picture>
+                                            <source type="image/webp" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/lego-friends.webp, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/lego-friends@2x.webp 2x" />
+                                            <source type="image/png" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/lego-friends.png, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/lego-friends@2x.png 2x" />
+                                            <img src="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/lego-friends.png" alt="LEGO® Friends 41731 Mezinárodní škola v městečku Heartlake" width="200" height="200" loading="lazy" class="lpCompetition__product-image" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/lego-friends.png, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/lego-friends@2x.png 2x" />
+                                        </picture>
+                                    </figure>
+                                    <div class="lpCompetition__productInfo">
+                                        <p class="perex perex--name">LEGO<sup>®</sup> Friends 41731 Mezinárodní škola v městečku Heartlake</p>
+                                        <p class="perex perex--number">71x</p>
+                                    </div>
+                                </a>
+
+                                <a href="/hracky/lego-technic-42151-bugatti-bolide-d7582442.htm?evt=ac" class="lpCompetition__box">
+                                    <figure>
+                                        <picture>
+                                            <source type="image/webp" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/lego-minecraft.webp, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/lego-minecraft@2x.webp 2x" />
+                                            <source type="image/png" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/lego-minecraft.png, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/lego-minecraft@2x.png 2x" />
+                                            <img src="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/lego-minecraft.png" alt="LEGO® Technic 42151 Bugatti Bolide" width="200" height="200" loading="lazy" class="lpCompetition__product-image" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/lego-minecraft.png, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/lego-minecraft@2x.png 2x" />
+                                        </picture>
+                                    </figure>
+                                    <div class="lpCompetition__productInfo">
+                                        <p class="perex perex--name">LEGO<sup>®</sup> Technic 42151 Bugatti Bolide</p>
+                                        <p class="perex perex--number">71x</p>
+                                    </div>
+                                </a>
+
+                                <a href="/hracky/lego-ninjago-71786-zaneuv-ledovy-drak-d7582480.htm?evt=ac" class="lpCompetition__box">
+                                    <figure>
+                                        <picture>
+                                            <source type="image/webp" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/lego-friends.webp, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/lego-friends@2x.webp 2x" />
+                                            <source type="image/png" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/lego-friends.png, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/lego-friends@2x.png 2x" />
+                                            <img src="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/lego-friends.png" alt="LEGO® NINJAGO® 71786 Zaneův ledový drak" width="200" height="200" loading="lazy" class="lpCompetition__product-image" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/lego-friends.png, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/lego-friends@2x.png 2x" />
+                                        </picture>
+                                    </figure>
+                                    <div class="lpCompetition__productInfo">
+                                        <p class="perex perex--name">LEGO<sup>®</sup> NINJAGO<sup>®</sup> 71786 Zaneův ledový drak</p>
+                                        <p class="perex perex--number">71x</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </section>
+
+                    <!-- how to win -->
+                    <section class="lpHowTo">
+                        <div class="lpWrapper">
+                            <h3 class="hdl3">Jak vyhrát?</h3>
                             <div class="lpHowTo__boxes grid-3">
                                 <div class="lpHowTo__box">
                                     <span class="lpHowTo__number">1</span> 
@@ -49,6 +150,10 @@
                             </div>
 
                             <a href="#" class="btn btn--media"><span class="btn-text">Více informací</span></a>
+
+                            <div class="lpHowTo__video">
+                                <iframe src="https://www.youtube.com/embed/Jm18GVeZhl8" title="Epická LEGO® výhra - Záznam 3 letů do vesmíru" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            </div>
                         </div>
                     </section>
                     <!-- footer -->
