Program section is not finished

--- a/index.html
+++ b/index.html
@@ -28,8 +28,32 @@
             <div id="articlePage">
                 <!-- BEFORE UPLOADING REMOVE EVERYTHING ABOVE UP TO THIS POINT -->
                 <div class="lp" id="landingpage">
+                    <!-- lego days -->
+                    <section class="lpDays sectionMargin">
+                        <picture>
+                            <source type="image/webp" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/days-image.webp, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/days-image@2x.webp 2x" />
+                            <source type="image/png" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/days-image.png, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/days-image@2x.png 2x" />
+                            <img src="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/days-image.png" alt="LEGO raketa" width="180" height="211" loading="lazy" class="lpDays__badge" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/days-image.png, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/days-image@2x.png 2x" />
+                        </picture>
+
+                        <div class="lpWrapper">
+                            <div class="lpTextWrapper">
+                                <h2 class="hdl2">Dny LEGO®</h2>
+                                <p class="subHdl">Vybrané stavebnice LEGO® pořídíte <strong>od&nbsp;19. do&nbsp;25.&nbsp;6.&nbsp;2023</strong> s 15% slevou. Stačí jen využít kód <strong>DNYLEGO15</strong>.</p>
+                            </div>
+
+                            <picture>
+                                <source type="image/webp" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/days-alzak.webp, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/days-alzak@2x.webp 2x" />
+                                <source type="image/jpg" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/days-alzak.jpg, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/days-alzak@2x.jpg 2x" />
+                                <img src="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/days-alzak.jpg" alt="LEGO alzák" width="780" height="443" loading="lazy" class="lpDays__alzak blockMargin" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/days-alzak.jpg, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/days-alzak@2x.jpg 2x" />
+                            </picture>
+
+                            <div class="react-carousel blockMargin" data-react-client-component="articleComponents" data-component-name="Carousel" data-api-url="/api/carousels/cd/packs/28034" data-react-client-component-id="carousel1" data-hide-title="true"></div>
+                        </div>
+                    </section>
+
                     <!-- showroom -->
-                    <section class="lpShowroom addPolygon">
+                    <section class="lpShowroom addPolygon sectionMargin">
                         <div class="lpWrapper"> 
                             <picture>
                                 <source type="image/webp" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/showroom-badge.webp, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/showroom-badge@2x.webp 2x" />
@@ -43,7 +67,7 @@
                             </div>
 
                             <!-- usp -->
-                            <div class="lpUsp lpGrid-4 sectionMargin">
+                            <div class="lpUsp lpGrid-4 blockMargin">
                                 <div class="lpUsp__box">
                                     <svg><use xlink:href="#icon-shop"></use></svg>
                                     <h4 class="hdl4">Nový LEGO<sup>®</sup> shop</h4>
@@ -67,7 +91,7 @@
                             </div>
 
                             <!-- photos -->
-                            <div class="lpPhotos sectionMargin">
+                            <div class="lpPhotos blockMargin">
                                 <img src="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/photo-star.svg" alt="Star icon" class="lpPhotos__star" width="180" height="188">   
                                 <div class="lpPhotos__wrapper lpGrid-2">
                                     <picture>
@@ -84,7 +108,7 @@
                             </div>
 
                             <!-- invite -->
-                            <div class="lpInvite sectionMargin">
+                            <div class="lpInvite blockMargin">
                                 <picture>
                                     <source type="image/webp" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/invite-image.webp, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/invite-image@2x.webp 2x" />
                                     <source type="image/png" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/invite-image.png, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/invite-image@2x.png 2x" />
@@ -102,7 +126,7 @@
                             <p class="perex perex--short">Jsme velmi rádi, že vám můžeme přímo v Showroomu Praha 7 nabídnout speciální místo pro všechny fanoušky stavebnic LEGO® bez ohledu na věk. Pro nás je otevření LEGO® Shopu velká událost, proto jsme si pro vás v tento den připravili slavnostní program. Přijďte se 22. 6. 2023 podívat do našeho nového LEGO® Shopu, prohlédněte si stavebnice LEGO® a sestavené modely, přestřihněte si pásku speciálními nůžkami LEGO®u a užijte si odpoledne se zajímavými hosty.</p>
 
                             <!-- products -->
-                            <div class="lpKits lpGrid-4 sectionMargin">
+                            <div class="lpKits lpGrid-4 blockMargin">
                                 <a href="/hracky/lego-10283-nasa-raketoplan-discovery-d6592544.htm?evt=ac" class="lpKits__box">
                                     <figure>
                                         <picture>
@@ -164,12 +188,12 @@
                                 <p class="subHdl">Vyhrajte hodnotné stavebnice LEGO<sup>®</sup> a minifigurky, které skutečně byly ve vesmíru!</p>
                             </div>
 
-                            <div class="lpCompetition__astronaut sectionMargin">
+                            <div class="lpCompetition__astronaut blockMargin">
                                 <h3 class="hdl3">O co se hraje?</h3>
                                 <picture>
                                     <source type="image/webp" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/vyhra-figurka.webp, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/vyhra-figurka@2x.webp 2x" />
                                     <source type="image/png" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/vyhra-figurka.png, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/vyhra-figurka@2x.png 2x" />
-                                    <img src="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/vyhra-figurka.png" alt="LEGO astronaut" width="280" height="221" loading="lazy" class="lpCompetition__astronaut-image sectionMargin" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/vyhra-figurka.png, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/vyhra-figurka@2x.png 2x" />
+                                    <img src="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/vyhra-figurka.png" alt="LEGO astronaut" width="280" height="221" loading="lazy" class="lpCompetition__astronaut-image blockMargin" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/vyhra-figurka.png, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/vyhra-figurka@2x.png 2x" />
                                 </picture>
 
                                 <div class="lpCompetition__productInfo">
@@ -178,7 +202,7 @@
                                 </div>
                             </div>
 
-                            <div class="lpCompetition__boxes sectionMargin">
+                            <div class="lpCompetition__boxes blockMargin">
                                 <a href="/hracky/lego-city-60350-lunarni-vyzkumna-stanice-d6910459.htm?evt=ac" class="lpCompetition__box">
                                     <figure>
                                         <picture>
@@ -253,10 +277,10 @@
                     </section>
 
                     <!-- how to win -->
-                    <section class="lpHowTo sectionMargin">
+                    <section class="lpHowTo blockMargin">
                         <div class="lpWrapper">
                             <h3 class="hdl3">Jak vyhrát?</h3>
-                            <div class="lpProcess lpGrid-3 sectionMargin">
+                            <div class="lpProcess lpGrid-3 blockMargin">
                                 <div class="lpProcess__box">
                                     <span class="lpProcess__number">1</span> 
                                     <p class="perex">Kupte jakýkoliv produkt LEGO<sup>®</sup> a uschovejte si účtenku.</p>
@@ -273,9 +297,9 @@
                                 </div>
                             </div>
 
-                            <a href="#" class="btn btn--media sectionMargin"><span class="btn-text">Více informací</span></a>
+                            <a href="#" class="btn btn--media blockMargin"><span class="btn-text">Více informací</span></a>
 
-                            <div class="lpVideo sectionMargin">
+                            <div class="lpVideo blockMargin">
                                 <iframe src="https://www.youtube.com/embed/Jm18GVeZhl8" title="Epická LEGO® výhra - Záznam 3 letů do vesmíru" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             </div>
                         </div>
