Guest part is not finished

--- a/index.html
+++ b/index.html
@@ -28,6 +28,40 @@
             <div id="articlePage">
                 <!-- BEFORE UPLOADING REMOVE EVERYTHING ABOVE UP TO THIS POINT -->
                 <div class="lp" id="landingpage">
+                    <!-- program -->
+                    <section class="lpProgram addPolygon sectionMargin">
+                        <div class="lpWrapper">
+                            <!-- guests -->
+                            <div class="lpGuest lpGrid-2 blockMargin">
+                                <div class="lpGuest__box">
+                                    <picture>
+                                        <source type="image/webp" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/tomas.webp, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/tomas@2x.webp 2x" />
+                                        <source type="image/png" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/tomas.png, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/tomas@2x.png 2x" />
+                                        <img src="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/tomas.png" alt="Tomáš Rousek - NASA Designer" width="393" height="354" loading="lazy" class="lpGuest__photo" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/tomas.png, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/tomas@2x.png 2x" />
+                                    </picture>
+                                    <div class="lpBoxText">
+                                        <p class="perex">NASA designer</p>
+                                        <h3 class="hdl3">Tomáš Rousek</h3>
+                                        <p class="perex">Tomáš Rousek je designér NASA, který navrhl speciální sondu LEGO®. Ta se v rámci vesmírné plavby dostala až do stratosféry. Tomáš si pro vás připravil, přednášku o vesmíru a podpisovou akci.</p>
+                                    </div>
+                                </div>
+
+                                <div class="lpGuest__box">
+                                    <picture>
+                                        <source type="image/webp" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/jirka.webp, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/jirka@2x.webp 2x" />
+                                        <source type="image/png" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/jirka.png, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/jirka@2x.png 2x" />
+                                        <img src="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/jirka.png" alt="Jirka Král - Influencer" width="335" height="355" loading="lazy" class="lpGuest__photo" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/jirka.png, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/jirka@2x.png 2x" />
+                                    </picture>
+                                    <div class="lpBoxText">
+                                        <p class="perex">Influencer</p>
+                                        <h3 class="hdl3">Jirka Král</h3>
+                                        <p class="perex">Hvězda českého YouTube, influencer a úspěšný podnikatel Jirka Král patří mezi velké fanoušky stavebnic LEGO®, takže je jasné, že na našem slavnostním otevření LEGO® Shopu rozhodně nemůže chybět.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+
                     <!-- lego days -->
                     <section class="lpDays sectionMargin">
                         <picture>
@@ -40,7 +74,7 @@
                             <div class="lpTextWrapper">
                                 <h2 class="hdl2">Dny LEGO®</h2>
                                 <p class="subHdl">Vybrané stavebnice LEGO® pořídíte <strong>od&nbsp;19. do&nbsp;25.&nbsp;6.&nbsp;2023</strong> s 15% slevou. Stačí jen využít kód <strong>DNYLEGO15</strong>.</p>
-                            </div>
+                            </div>           
 
                             <picture>
                                 <source type="image/webp" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/days-alzak.webp, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/days-alzak@2x.webp 2x" />
@@ -115,7 +149,7 @@
                                     <img src="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/invite-image.png" alt="LEGO Showroom foto" width="445" height="398" loading="lazy" class="lpInvite__image" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/invite-image.png, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/invite-image@2x.png 2x" />
                                 </picture>
 
-                                <div class="lpInvite__textWrapper">
+                                <div class="lpInvite__textWrapper lpBoxText">
                                     <p class="perex">Na dosah ruky</p>
                                     <h3 class="hdl3">Stavebnice LEGO® na jednom místě</h3>
                                     <p class="perex">Kostičky LEGO® jsou zárukou perfektní zábavy pro děti i dospělé. Přijďte se podívat do našeho nového LEGO® Shopu, prohlédněte si sestavené modely a užijte si jedinečné herní zážitky.</p>
